hphp/hack/test/typecheck/xhp_modifier/xhp_modifier_not_on_enum.php.exp
File "xhp_modifier_not_on_enum.php", line 4, characters 5-5:
The 'class' keyword is expected here. (Parsing[1002])
File "xhp_modifier_not_on_enum.php", line 4, characters 5-5:
Encountered unexpected text '', was expecting a class kind. (Parsing[1002])
