hphp/hack/test/typecheck/xhp_modifier/xhp_modifier_not_on_enum.php
<?hh

// XHP keyword is not allowed for enums
xhp enum Foo {}
